# Tests_CPP

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Main.cpp
src/MyProject/: CMakeLists.txt
src/MyProject/src/: MyClass.cpp  MyClass.hpp
tests/: CMakeLists.txt
tests/UnitTests/: MyClassTest.cpp
